<resources>
    <string name="app_name">CalculateTheTip</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="round_up_tips">Round up tips?</string>
    <string name="amazing_15">Amazing (15%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="tip_amount_20_00">Tip Amount: %s</string>
    <string name="cost_of_service">Cost Of Service</string>
</resources>